get the structure sorted out, can render markdown files

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "jquery": "~2.2.0",
+    "jstransformer-markdown": "^1.1.0",
     "normalize.css": "~3.0.3"
   },
   "devDependencies": {
